--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
     Publish:
-        if: github.repository == 'Vendicated/Vencord'
+        if: github.repository == 'Dxrknesx/ParadoxonClient'
         runs-on: ubuntu-latest
 
         steps:
